Updated styles2.css to fix overflow bug as well as modifiy list wrapping to go from top to bottom and overflow right after column is filled

--- a/Website/CSS/styles2.css
+++ b/Website/CSS/styles2.css
@@ -101,16 +101,19 @@ padding: 4px 4px;
  float:left;
  }
  
- .ul-list-container{
-  width:300px;
-  background-color: black;
+ .list-container{
+  display:flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  height: 150px;
+  width: 25px;
  }
 
  .skill-list{
   margin-left: 18px;
   padding: 0px 8px;
   width:200px;
-  background-color: yellow;
+  
   display: block;
   float:left;
  }
